--- a/字体结构评估001.ipynb
+++ b/字体结构评估001.ipynb
@@ -475,6 +475,7 @@
     "#     plt.title(titles[i])\n",
     "#     plt.xticks([]),plt.yticks([])\n",
     "# plt.show()\n",
+    "#smwwsy\n",
     "plt.imshow(images[4])\n",
     "plt.show()"
    ]
@@ -510,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
